<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linBotones"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linCampos"
        app:layout_constraintVertical_bias="0.5">

        <ImageButton
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/agregar"
            android:onClick="agregarContacto"
            android:src="@drawable/add_circle"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/buscar"
            android:onClick="buscarContacto"
            android:src="@drawable/person_search"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/actualizar"
            android:onClick="actualizarContacto"
            android:src="@drawable/update_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eliminar"
            android:onClick="eliminarContacto"
            android:src="@drawable/delete_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="listarContactos"
            android:text="@string/lista"
            android:textAlignment="center" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="203dp"
        android:contentDescription="@string/img_context"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/person_icon" />

    <LinearLayout
        android:id="@+id/linCampos"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/txtNumEmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/numEmp"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="familyName"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phoneNumber"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/sueldo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>